--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             </div>
         </div>
     </footer>
-    <script src="./js/index.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
