--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <img src="./img/nosotros2.jpg" class="d-block " width="400px" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="/img/nosotros3.jpg" class="d-block " width="400px" alt="...">
+                            <img src="./img/nosotros3.jpg" class="d-block " width="400px" alt="...">
                         </div>
                     </div>
                 </div>
